# handspread

./: .env.example  .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  ROBUSTNESS_SPEC.md  pyproject.toml
.beads/: issues.jsonl
docs/: SMOKE-TEST-2026-02-16.md
examples/: diagnose_tags.py  run_comps.py  smoke_components.py
handspread/: CLAUDE.md  __init__.py  config.py  engine.py  models.py
handspread/analysis/: __init__.py  _utils.py  enterprise_value.py  growth.py  multiples.py  operating.py
handspread/market/: __init__.py  finnhub_client.py  models.py
tests/: test_engine.py  test_enterprise_value.py  test_finnhub_client.py  test_growth.py  test_models.py  test_multiples.py  test_operating.py  test_scenario_regressions.py  test_utils.py
