[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handspread"
version = "0.1.0"
description = "Comparable company analysis engine with full provenance chains"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edgarpack",
    "finnhub-python>=2.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
